# mini-git

./: .gitignore  .null-ls_462497_main.c  CMakeLists.txt  Makefile  README.md  git-using-c  header.sh  main.c
.mini-git/: config
components/commands/: add.c  init.c
components/core/: create_blob.c  deserialize_blob.c
components/helper/: create_dir.c  dynamic_string_array.c  error_handling.c  gitignore_loader.c  is_exists.c  read_file.c  touch.c  write_file.c  write_file.cc
components/include/: add.h  create_blob.h  create_dir.h  deserialize_blob.h  dynamic_string_array.h  error_handling.h  gitignore_loader.h  init.h  is_exists.h  limits.h  read_file.h  touch.h  uthash.h  write_file.h
components/typedef/: standard_error.h
